# haskell-udemy

./: .gitignore  LICENSE  Makefile  README.md  chapter8.cabal  gendata.sh  package.yaml  test.data
.github/workflows/: haskell.yml
app/: Main.hs
src/: Chapter8.hs
