cabal-version: 1.12

name:           chapter8
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/frankhjung/chapter8#readme>
homepage:       https://github.com/frankhjung/chapter8#readme
bug-reports:    https://github.com/frankhjung/chapter8/issues
author:         Frank H Jung
maintainer:     frankhjung@linux.com
copyright:      Copyright © 2017-2021 Frank H Jung
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/frankhjung/chapter8

library
  exposed-modules: Chapter8
  other-modules: Paths_chapter8
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable chapter8
  main-is: Main.hs
  other-modules: Paths_chapter8
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chapter8
  default-language: Haskell2010

-- test-suite test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   other-modules: Paths_chapter8
--   hs-source-dirs: test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , chapter8
--   default-language: Haskell2010
